# videonode-sbc-config

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/videonode_sbc_config/: __init__.py  cli.py
src/videonode_sbc_config/deploys/: utils.py
src/videonode_sbc_config/deploys/generic/: __init__.py  alloy.py  cockpit.py  led_permissions.py
src/videonode_sbc_config/deploys/hardware/: __init__.py
src/videonode_sbc_config/deploys/hardware/rockchip/: __init__.py  ffmpeg.py  mpp.py  overlays.py  permissions.py  rga.py  stack.py
src/videonode_sbc_config/deploys/os/: __init__.py
src/videonode_sbc_config/deploys/os/armbian/: __init__.py  kernel_overlays.py  led_disable.py
src/videonode_sbc_config/deploys/verify/: __init__.py  rockchip_armbian.py  runner.py  types.py
src/videonode_sbc_config/platform/: __init__.py  detect.py  types.py
src/videonode_sbc_config/ui/: __init__.py  components.py  dashboard.py
