[project]
name = "videonode-sbc-config"
version = "0.1.0"
description = "Rockchip RK3588 SBC configuration for videonode"
readme = "README.md"
authors = [
    { name = "Stepan Mazurov", email = "smazurov@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pyinfra>=3.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
videonode-sbc-config = "videonode_sbc_config.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
